@@ -1119,6 +1119,12 @@ namespace scene
 		virtual u32 registerNodeForRendering(ISceneNode* node,
 			E_SCENE_NODE_RENDER_PASS pass = ESNRP_AUTOMATIC) = 0;
 
+		//! Clear all nodes which are currently registered for rendering
+		/** Usually you don't have to care about this as drawAll will clear nodes
+		after rendering them. But sometimes you might have to manully reset this.
+		For example when you deleted nodes between registering and rendering. */
+		virtual void clearAllRegisteredNodesForRendering() = 0;
+
 		//! Draws all the scene nodes.
 		/** This can only be invoked between
 		IVideoDriver::beginScene() and IVideoDriver::endScene(). Please note that
